--- a/zlovin.Final/zlovin.Final.vcxproj.filters
+++ b/zlovin.Final/zlovin.Final.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClCompile Include="Source\PlayerBehaviorComponent.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\PlanetFactory.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Common.h">
@@ -132,6 +135,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Source\PlayerBehaviorComponent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\PlanetFactory.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
